# alpaca-cli

./: .env.example  .gitignore  AGENTS.md  EXECUTION_PLAN.md  LICENSE  README.md  SKILL.md  pyproject.toml  tlh_etf_asset_classes_final.json  tlh_prompt.md
.github/workflows/: daily-tlh-report.yml
configs/: replacement_map.yaml  target_model.yaml
scripts/: daily_tlh_report.py
tests/: test_alpaca_client.py  test_cli.py  test_config.py  test_daily_tlh_report.py  test_executor.py  test_intent_store.py  test_models.py  test_operator_summary.py  test_planning.py  test_render.py  test_tlh_daily.py
tradeops/: __init__.py
tradeops/app/: __init__.py  alpaca_client.py  cli.py  config.py  executor.py  intent.py  models.py  operator_summary.py  planner.py  render.py  scheduler.py  store.py  streams.py  tlh.py  tlh_daily.py  validator.py
